minor changes to support test code